--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,14 @@
 .container {
   display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+}
+
+.sub-header {
+  display: flex;
+  justify-content: space-around;
 }
