--- a/public/style.css
+++ b/public/style.css
@@ -37,3 +37,22 @@
   flex-direction: column;
   padding-left: 50px;
 }
+
+.thumbnail{
+  width: 100px;
+  height: 100px
+}
+.myprofile{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+  
+}
+
+.profile-border{
+  display: flex;
+  flex-direction: column;
+  border: 2px solid;
+  width: 300px;
+  height: 250px;
+}
