finished map on request form

--- a/public/style.css
+++ b/public/style.css
@@ -74,3 +74,18 @@ nav a.selected {
 h1 {
   text-align: center;
 }
+
+.courtFinder {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.courtForm {
+  display: flex;
+  flex-direction: column;
+}
+
+.courtMap {
+  width: 50%;
+}
