--- a/public/style.css
+++ b/public/style.css
@@ -23,8 +23,9 @@
   display: flex;
   flex-direction: column;
   border: 2px solid;
-  width: 300px;
-  height: 250px;
+  flex-shrink: 3;
+  /* width: 300px;
+  height: 300px; */
 }
 
 .game-card-header {
@@ -58,17 +59,25 @@
 
 nav {
   display: flex;
-  justify-content: space-around;
+  
+  
 }
-
+.nav > div {
+  margin-left: 10%;
+  margin-right: 10%;
+}
 nav a {
   padding: 0.5rem;
 }
 
-nav a.selected {
+#user-form {
+  padding-top: 15px;
+}
+
+/* nav a.selected {
   background-color: dodgerblue;
   color: cornsilk;
-}
+} */
 
 h1 {
   text-align: center;
