--- a/public/style.css
+++ b/public/style.css
@@ -187,3 +187,15 @@ span {
 #nav-link{
   color: #292b2c;
 }
+
+.gor{
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: start;
+  align-items: center;
+  font-size: 3rem;
+}
