--- a/public/style.css
+++ b/public/style.css
@@ -97,13 +97,12 @@ h1 {
 }
 
 .navbar {
-  background-color: 'bg-danger';
+  background-color: "bg-danger";
   height: 80px;
   display: flex;
   justify-content: start;
   align-items: center;
-
-} 
+}
 
 .menu-bars {
   margin-left: 2 rem;
@@ -127,30 +126,30 @@ h1 {
   transition: 350ms;
 }
 
-.nav-text{
+.nav-text {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 8px 0px 8px 16px;;
+  padding: 8px 0px 8px 16px;
   list-style: 60px;
 }
 .nav-text a {
   text-decoration: none;
   color: #f5f5f5;
-  font-size:  18px;
+  font-size: 18px;
   width: 95%;
   display: flex;
   align-items: center;
   padding: 0 16px;
-  border-radius: 4px ;
+  border-radius: 4px;
 }
 
-.nav-text a:hover{
+.nav-text a:hover {
   background-color: #d9534f;
 }
 
 .nav-menu-items {
-  width: 100%
+  width: 100%;
 }
 .navbar-toggle {
   background-color: black;
@@ -163,24 +162,37 @@ h1 {
 
 span {
   margin-left: 16px;
-} 
+}
 
-@import url('https;//fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https;//fonts.googleapis.com/css2?family=Lato&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
-.home, .mystats, .account {
+.home,
+.mystats,
+.account {
   display: flex;
   height: 90vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
 }
-#nav-link{
+#nav-link {
   color: #292b2c;
+}
+
+.findGame {
+  display: flex;
+  flex-direction: column;
+}
+
+.filterZip {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
