--- a/public/style.css
+++ b/public/style.css
@@ -188,8 +188,19 @@ span {
   color: #292b2c;
 }
 
-.gor{
+.home{
   background-color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: start;
+  align-items: center;
+  font-size: 3rem;
+}
+.gor{
+  background-color: red;
   width: 100%;
   height: 100%;
   display: flex;
