--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,11 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  margin-top: 20px;
+}
+
+.gamesHostedHeader {
+  margin-bottom: 40px;
 }
 
 .header {
@@ -94,16 +98,16 @@ h1 {
 
 .courtMap {
   width: 50%;
+  margin-top: 20px;
 }
 
 .navbar {
-  background-color: 'bg-danger';
+  background-color: "bg-danger";
   height: 80px;
   display: flex;
   justify-content: start;
   align-items: center;
-
-} 
+}
 
 .menu-bars {
   margin-left: 2 rem;
@@ -127,30 +131,33 @@ h1 {
   transition: 350ms;
 }
 
-.nav-text{
+.nav-text {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 8px 0px 8px 16px;;
+  padding: 8px 0px 8px 16px;
   list-style: 60px;
 }
 .nav-text a {
   text-decoration: none;
   color: #f5f5f5;
-  font-size:  18px;
+  font-size: 18px;
   width: 95%;
   display: flex;
   align-items: center;
   padding: 0 16px;
-  border-radius: 4px ;
+  border-radius: 4px;
 }
 
-.nav-text a:hover{
+.nav-text a:hover {
   background-color: #d9534f;
 }
 
+.home-hover a:hover {
+  background-color: #d9534f;
+}
 .nav-menu-items {
-  width: 100%
+  width: 100%;
 }
 .navbar-toggle {
   background-color: black;
@@ -163,24 +170,81 @@ h1 {
 
 span {
   margin-left: 16px;
-} 
+}
 
-@import url('https;//fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https;//fonts.googleapis.com/css2?family=Lato&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
-.home, .mystats, .account {
+.home,
+.mystats,
+.account {
   display: flex;
   height: 90vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
 }
-#nav-link{
+#nav-link {
   color: #292b2c;
+}
+
+.findGame {
+  display: flex;
+  flex-direction: column;
+}
+
+.filterZip {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.myGamesHeader {
+  padding: 10px;
+}
+
+.myGamesList {
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cardAndButton {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.listOfGames {
+  width: 100%;
+}
+.home {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: start;
+  align-items: center;
+  font-size: 3rem;
+}
+.gor {
+  background-color: red;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: start;
+  align-items: center;
+  font-size: 3rem;
 }
